@@ -1,4 +1,4 @@
-AC_INIT(Accerciser, 0.1.0, eitan@ascender.com, accerciser)
+AC_INIT(Accerciser, 0.2.0, eitan@ascender.com, accerciser)
 AC_CONFIG_SRCDIR(src/accerciser.in)
 AM_INIT_AUTOMAKE
 AM_MAINTAINER_MODE
