@@ -1,3 +1,8 @@
+2007-03-16 Peter Parente  <parente@cs.unc.edu>
+
+	* pyreqs.py: Fixed check for wnck when building RPM
+	* configure.in: Post release version increment
+
 2007-03-15  Eitan Isaacson  <eitan@ascender.com>
 
 	* plugins/Makefile.am: 
